<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">打卡机程序</string>
    <string name="version_read">读取版本</string>
    <string name="single_read">单次读取</string>
    <string name="continue_read">连续读取</string>
    <string name="stop_read">停止读取</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="pass">合格</string>
    <string name="fail">失败</string>

    <string name="scanner_switch">Scanner Switch</string>
    <string name="scanner_button">Scanner Button</string>
    <string name="list_item">人员</string>
    <string name="list_item_position">职位</string>
    <string name="punch_start">开启RFID打卡模式</string>
    <string name="export_today">导出当日</string>
    <string name="export_month">导出当月</string>

    <string-array name="type">
        <item>ESAM</item>
        <item>条码</item>
        <item>红外</item>
        <item>RS485</item>
        <item>蓝牙抄控器</item>
        <item>RS232</item>
        <item>串口抄控器</item>
        <item>安全单元</item>
        <item>RS485/PSAM</item>
        <item>RS232透传</item>
    </string-array>

    <string-array name="activity_channel_listener_type">
        <item>红外</item>
        <item>485</item>
        <item>232</item>
        <item>蓝牙抄控器</item>
        <item>安全单元</item>
    </string-array>

    <array name="clock">
        <item>"12"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
    </array>
</resources>