<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/white_background_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blueAndWhite" />


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/dialog_btn_cancel_selector"
            android:text="@string/export_today"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/dialog_btn_selector"
            android:text="@string/export_month"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>